--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f2f2f2;
+  text-align: center; 
+}
+
+#imageMapper {
+	  display: inline-block;
+	  margin: auto;
+	  max-width: 500;
+}
+
+@media screen and (max-width: 799px) {
+	#imageMapper {
+	  font-size : 3vw;
+	}
+}
+@media screen and (min-width: 800px) {
+	#imageMapper {
+	  font-size : 28px;
+	}
 }
 
 code {
