--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
 	  max-width: 500;
 }
 
+h1 { font-family: MedievalSharp; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: MedievalSharp; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: MedievalSharp; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: MedievalSharp; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: MedievalSharp; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+
+h1 {
+  font-size: 4vw;
+}
+h2 {
+  font-size: 3vw;
+}
+
 @media screen and (max-width: 799px) {
 	#imageMapper {
 	  font-size : 2.5vw;
